完善切片系列API注释、实现和单测